# artemis

./: .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yaml
migrations/: 01-create-db.sql  02-create-indexes.sql  99-delete-indexes.sql
src/: db.rs  fcc_date.rs  file.rs  lib.rs  load.rs  main.rs  meta.rs  types.rs
src/sql/: insert-amateur.sql  insert-comment.sql  insert-entity.sql  insert-header.sql  insert-history.sql  insert-license-attachment.sql  insert-special-condition-code.sql  insert-special-condition-free-form.sql  insert-special-condition.sql
web/: package.json  pnpm-lock.yaml
web/src/: App.css  App.jsx  index.css
web/src/components/: Result.jsx  Results.css
web/src/pages/: Callsign.css  Callsign.jsx  Search.jsx
