[package]
name = "artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
csv = "1.1.6"
filetime = "0.2.18"
indicatif = "0.17.2"
itertools = "0.10.5"
regex = "1.7.0"
serde = { version = "1.0.149", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.23.0", features = ["full"] }
ureq = "2.5.0"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
