[package]
name = "artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
axum = "0.6.3"
chrono = {version = "0.4.23", features = ["serde"]}
csv = "1.1.6"
filetime = "0.2.19"
indicatif = "0.17.2"
itertools = "0.10.5"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.24.1", features = ["full"] }
ureq = "2.6.1"
zip = { version = "0.6.3", default-features = false, features = ["deflate"] }
