[package]
name = "artemis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = {version = "0.4.26", features = ["serde"]}
csv = "1.2.2"
filetime = "0.2.21"
include_dir = { version = "0.7.3", features = ["metadata"] }
indicatif = "0.17.5"
itertools = "0.10.5"
mime = "0.3.17"
mime_guess = "2.0.4"
regex = "1.8.4"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.28.2", features = ["full"] }
ureq = "2.6.2"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
